Dodanie szkieletu gRPC

--- a/service/build.gradle
+++ b/service/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '2.2.2.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
 	id 'java'
+	id 'com.google.protobuf' version '0.8.8'
 }
 
 group = 'pl.put.srds'
@@ -18,8 +19,27 @@ dependencies {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 	testImplementation 'io.projectreactor:reactor-test'
+	implementation 'io.grpc:grpc-netty-shaded:1.26.0'
+	implementation 'io.grpc:grpc-protobuf:1.26.0'
+	implementation 'io.grpc:grpc-stub:1.26.0'
 }
 
 test {
 	useJUnitPlatform()
+}
+
+protobuf {
+	protoc {
+		artifact = "com.google.protobuf:protoc:3.11.0"
+	}
+	plugins {
+		grpc {
+			artifact = 'io.grpc:protoc-gen-grpc-java:1.26.0'
+		}
+	}
+	generateProtoTasks {
+		all()*.plugins {
+			grpc {}
+		}
+	}
 }
