--- a/service/build.gradle
+++ b/service/build.gradle
@@ -14,7 +14,8 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-cassandra-reactive'
+	//implementation 'org.springframework.boot:spring-boot-starter-data-cassandra-reactive'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
@@ -22,6 +23,7 @@ dependencies {
 	implementation 'io.grpc:grpc-netty-shaded:1.26.0'
 	implementation 'io.grpc:grpc-protobuf:1.26.0'
 	implementation 'io.grpc:grpc-stub:1.26.0'
+	implementation 'javax.annotation:javax.annotation-api:1.3.2'
 }
 
 test {
