--- a/EmergenciesClient/build.gradle
+++ b/EmergenciesClient/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'com.google.protobuf' version '0.8.8'
+    id "com.google.protobuf" version "0.8.8"
     id "application"
 }
 
@@ -18,30 +18,41 @@ version '1.0-SNAPSHOT'
 
 sourceCompatibility = '11'
 
+def grpcVersion = '1.26.0' // CURRENT_GRPC_VERSION
+def protobufVersion = '3.11.0'
+def protocVersion = protobufVersion
+
 repositories {
+    maven {
+        url "https://maven-central.storage-download.googleapis.com/repos/central/data/" }
     mavenCentral()
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    implementation 'io.grpc:grpc-netty-shaded:1.26.0'
-    implementation 'io.grpc:grpc-protobuf:1.26.0'
-    implementation 'io.grpc:grpc-stub:1.26.0'
+    implementation "io.grpc:grpc-protobuf:${grpcVersion}"
+    implementation "io.grpc:grpc-stub:${grpcVersion}"
+    implementation "com.google.protobuf:protobuf-java-util:${protobufVersion}"
+    runtimeOnly "io.grpc:grpc-netty-shaded:${grpcVersion}"
+    testImplementation "io.grpc:grpc-testing:${grpcVersion}"
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
 }
 
 protobuf {
-    protoc {
-        artifact = "com.google.protobuf:protoc:3.11.0"
-    }
+    protoc { artifact = "com.google.protobuf:protoc:${protocVersion}" }
     plugins {
-        grpc {
-            artifact = 'io.grpc:protoc-gen-grpc-java:1.26.0'
-        }
+        grpc { artifact = "io.grpc:protoc-gen-grpc-java:${grpcVersion}" }
     }
     generateProtoTasks {
-        all()*.plugins {
-            grpc {}
+        all()*.plugins { grpc {} }
+    }
+}
+
+sourceSets {
+    main {
+        java {
+            srcDirs 'build/generated/source/proto/main/grpc'
+            srcDirs 'build/generated/source/proto/main/java'
         }
     }
 }
