--- a/service/build.gradle
+++ b/service/build.gradle
@@ -9,7 +9,13 @@ group = 'pl.put.srds'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
+def grpcVersion = '1.26.0' // CURRENT_GRPC_VERSION
+def protobufVersion = '3.11.0'
+def protocVersion = protobufVersion
+
 repositories {
+	maven {
+		url "https://maven-central.storage-download.googleapis.com/repos/central/data/" }
 	mavenCentral()
 }
 
@@ -20,9 +26,11 @@ dependencies {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 	testImplementation 'io.projectreactor:reactor-test'
-	implementation 'io.grpc:grpc-netty-shaded:1.26.0'
-	implementation 'io.grpc:grpc-protobuf:1.26.0'
-	implementation 'io.grpc:grpc-stub:1.26.0'
+	implementation "io.grpc:grpc-protobuf:${grpcVersion}"
+	implementation "io.grpc:grpc-stub:${grpcVersion}"
+	implementation "com.google.protobuf:protobuf-java-util:${protobufVersion}"
+	runtimeOnly "io.grpc:grpc-netty-shaded:${grpcVersion}"
+	testImplementation "io.grpc:grpc-testing:${grpcVersion}"
 	implementation 'javax.annotation:javax.annotation-api:1.3.2'
 }
 
@@ -31,17 +39,20 @@ test {
 }
 
 protobuf {
-	protoc {
-		artifact = "com.google.protobuf:protoc:3.11.0"
-	}
+	protoc { artifact = "com.google.protobuf:protoc:${protocVersion}" }
 	plugins {
-		grpc {
-			artifact = 'io.grpc:protoc-gen-grpc-java:1.26.0'
-		}
+		grpc { artifact = "io.grpc:protoc-gen-grpc-java:${grpcVersion}" }
 	}
 	generateProtoTasks {
-		all()*.plugins {
-			grpc {}
+		all()*.plugins { grpc {} }
+	}
+}
+
+sourceSets {
+	main {
+		java {
+			srcDirs 'build/generated/source/proto/main/grpc'
+			srcDirs 'build/generated/source/proto/main/java'
 		}
 	}
 }
