--- a/client/build.gradle
+++ b/client/build.gradle
@@ -1,7 +1,10 @@
 plugins {
     id 'java'
-    id "com.google.protobuf" version "0.8.8"
     id "application"
+
+    id 'idea'
+
+    id "com.google.protobuf" version "0.8.8"
 }
 
 apply plugin : "java"
@@ -38,6 +41,10 @@ dependencies {
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
 }
 
+application {
+    mainClassName = 'pl.put.srds.emergenciesclient.EmergenciesClientApplication'
+}
+
 protobuf {
     protoc { artifact = "com.google.protobuf:protoc:${protocVersion}" }
     plugins {
@@ -46,13 +53,13 @@ protobuf {
     generateProtoTasks {
         all()*.plugins { grpc {} }
     }
+
+    generatedFilesBaseDir = "${projectDir}/build/generated/source/proto/main"
 }
 
-sourceSets {
-    main {
-        java {
-            srcDirs 'build/generated/source/proto/main/grpc'
-            srcDirs 'build/generated/source/proto/main/java'
-        }
+idea {
+    module {
+        sourceDirs += file("${projectDir}/build/generated/source/proto/main/java")
+        sourceDirs += file("${projectDir}/build/generated/source/proto/main/grpc")
     }
 }
