--- a/service/build.gradle
+++ b/service/build.gradle
@@ -1,7 +1,12 @@
 plugins {
+	id 'java'
+	id 'application'
+
+	id 'idea'
+
 	id 'org.springframework.boot' version '2.2.2.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
-	id 'java'
+
 	id 'com.google.protobuf' version '0.8.8'
 }
 
@@ -38,6 +43,10 @@ test {
 	useJUnitPlatform()
 }
 
+application {
+	mainClassName = 'pl.put.srds.emergencies.EmergenciesApplication'
+}
+
 protobuf {
 	protoc { artifact = "com.google.protobuf:protoc:${protocVersion}" }
 	plugins {
@@ -46,13 +55,13 @@ protobuf {
 	generateProtoTasks {
 		all()*.plugins { grpc {} }
 	}
+
+	generatedFilesBaseDir = "${projectDir}/build/generated/source/proto/main"
 }
 
-sourceSets {
-	main {
-		java {
-			srcDirs 'build/generated/source/proto/main/grpc'
-			srcDirs 'build/generated/source/proto/main/java'
-		}
+idea {
+	module {
+		sourceDirs += file("${projectDir}/build/generated/source/proto/main/java")
+		sourceDirs += file("${projectDir}/build/generated/source/proto/main/grpc")
 	}
 }
