Dodanie szkieletu modelu bazy danych

--- a/service/build.gradle
+++ b/service/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 	runtimeOnly "io.grpc:grpc-netty-shaded:${grpcVersion}"
 	testImplementation "io.grpc:grpc-testing:${grpcVersion}"
 	implementation 'javax.annotation:javax.annotation-api:1.3.2'
+	implementation 'org.springframework.data:spring-data-cassandra:2.2.4.RELEASE'
 }
 
 test {
