--- a/orchestration/emergencies-stack.yaml
+++ b/orchestration/emergencies-stack.yaml
@@ -1,12 +1,29 @@
 version: "3"
 
 services:
+#    emergencies-service:
+#        image: ${REGISTRY}:5000/emergencies-service
+#        networks:
+#            - cluster-net
+#        ports:
+#            - 12345:12345
+#        deploy:
+#            replicas: 4
+#            restart_policy:
+#                condition: on-failure
+#                max_attempts: 3
+#                delay: 30s
+#                window: 120s
+
     cassy1:
         image: cassandra:3.11
         environment:
+            CASSANDRA_CLUSTER_NAME: emergencies_cluster
             CASSANDRA_BROADCAST_ADDRESS: "cassy1"
         networks:
             - cluster-net
+        ports:
+            - 9042:9042
         volumes:
             - cassandra-data-1:/var/lib/cassandra
         deploy:
@@ -21,6 +38,7 @@ services:
     cassy2:
         image: cassandra:3.11
         environment:
+            CASSANDRA_CLUSTER_NAME: emergencies_cluster
             CASSANDRA_BROADCAST_ADDRESS: "cassy2"
             CASSANDRA_SEEDS: "cassy1"
         networks:
@@ -34,12 +52,13 @@ services:
             restart_policy:
                 condition: on-failure
                 max_attempts: 3
-                delay: 15s
+                delay: 20s
                 window: 120s
 
     cassy3:
         image: cassandra:3.11
         environment:
+            CASSANDRA_CLUSTER_NAME: emergencies_cluster
             CASSANDRA_BROADCAST_ADDRESS: "cassy3"
             CASSANDRA_SEEDS: "cassy1,cassy2"
         networks:
@@ -53,12 +72,13 @@ services:
             restart_policy:
                 condition: on-failure
                 max_attempts: 3
-                delay: 15s
+                delay: 30s
                 window: 120s
 
     cassy4:
         image: cassandra:3.11
         environment:
+            CASSANDRA_CLUSTER_NAME: emergencies_cluster
             CASSANDRA_BROADCAST_ADDRESS: "cassy4"
             CASSANDRA_SEEDS: "cassy1,cassy2,cassy3"
         networks:
@@ -72,7 +92,7 @@ services:
             restart_policy:
                 condition: on-failure
                 max_attempts: 3
-                delay: 15s
+                delay: 25s
                 window: 120s
 
 volumes:
