Odpala sie aplikacja zawierajaca klasy modelu Laczy sie z instancjami cassandry

--- a/orchestration/cassandra/Dockerfile
+++ b/orchestration/cassandra/Dockerfile
@@ -2,7 +2,7 @@ FROM cassandra:3.11
 
 WORKDIR /usr/app
 
-COPY create_schema.cql load_data.cql drop_schema.cql datainit.sh ./
+COPY dbinit.cql datainit.sh ./
 
 ENTRYPOINT ["./datainit.sh"]
 
