--- a/client/src/main/resources/config.properties
+++ b/client/src/main/resources/config.properties
@@ -3,3 +3,10 @@ Host=127.0.0.1
 Port=12345
 BaseSleepTimeAfterConfirmation=200
 MaxSleepMultiplier=7
+BaseRetransmissionMultiplier=1
+MaxRetransmissionMultiplier=5
+RetransmissionTimeToMultiply=200
+BaseAlertMultiplier=1
+MaxAlertMultiplier=5
+AlertTimeToMultiply=200
+ChooseBrigadeThreshold=0.8
