Doszlifowane i spreparowane zapytania do cassandry Dodane logi zeby wiadomo bylo kiedy leci request

--- a/service/docker-compose.yaml
+++ b/service/docker-compose.yaml
@@ -3,8 +3,10 @@ version: '3'
 services:
     emergencies-service:
         build: .
+        network_mode: host
         ports:
             - 12345:12345
         environment:
             CASSANDRA_HOST: localhost
             CASSANDRA_PORT: 9042
+
