--- a/service/src/main/resources/application.yaml
+++ b/service/src/main/resources/application.yaml
@@ -5,3 +5,7 @@ cassandra:
     contactpoints: ${CASSANDRA_HOST}
     port: ${CASSANDRA_PORT}
     keyspace: emergencies
+
+emergencies:
+    service:
+        port: 12345
