Usprawniony deployment Cassandry i serwisy wszystko na swarmie

--- a/orchestration/cassandra/Dockerfile
+++ b/orchestration/cassandra/Dockerfile
@@ -4,5 +4,7 @@ WORKDIR /usr/app
 
 COPY dbinit.cql datainit.sh ./
 
-ENTRYPOINT ["./datainit.sh"]
+ENV CASSY_HOST=localhost
+
+ENTRYPOINT ["/bin/bash", "-c", "./datainit.sh ${CASSY_HOST}"]
 
